Work zone setup 20%

--- a/Project/src/main/resources/reservations/reservations_main.fxml
+++ b/Project/src/main/resources/reservations/reservations_main.fxml
@@ -135,6 +135,18 @@
                   <Rectangle fx:id="pantry" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="86.0" layoutX="478.0" layoutY="464.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="95.0" />
                   <Rectangle fx:id="classroom4" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="66.0" layoutX="508.0" layoutY="88.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="35.0" />
                   <Polygon fx:id="MHA" fill="DODGERBLUE" layoutX="626.0" layoutY="398.0" opacity="0.15" points="-50.0, 40.0, 39.0, 20.0, 18.8045654296875, -60.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+                  <Rectangle fx:id="workzone4_1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="15.0" layoutX="87.0" layoutY="296.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="15.0" />
+                  <Rectangle fx:id="workzone4_2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="18.0" layoutX="156.0" layoutY="304.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="14.0" />
+                  <Rectangle fx:id="classroom912" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="23.0" layoutX="77.0" layoutY="97.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="11.0" />
+                  <Rectangle fx:id="classroom9121" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="23.0" layoutX="77.0" layoutY="132.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="11.0" />
+                  <Rectangle fx:id="classroom91211" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="25.0" layoutX="77.0" layoutY="166.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="11.0" />
+                  <Rectangle fx:id="workzone4_11" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="10.0" layoutX="130.0" layoutY="101.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="12.0" />
+                  <Rectangle fx:id="workzone3_r1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="25.0" layoutX="112.0" layoutY="161.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+                  <Rectangle fx:id="workzone3_r2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="16.0" layoutX="172.0" layoutY="178.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="14.0" />
+                  <Rectangle fx:id="workzone3_r4" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="16.0" layoutX="172.0" layoutY="212.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="14.0" />
+                  <Rectangle fx:id="workzone3_r3" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="16.0" layoutX="172.0" layoutY="196.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="14.0" />
+                  <Rectangle fx:id="workzone3_r5" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="16.0" layoutX="172.0" layoutY="229.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="14.0" />
+                  <Rectangle fx:id="workzone3_r6" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="16.0" layoutX="172.0" layoutY="245.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="14.0" />
                </children>
             </Pane>
          </children>
