--- a/Project/src/main/resources/admintools/ATMV_selectedNodeOptions_popup.fxml
+++ b/Project/src/main/resources/admintools/ATMV_selectedNodeOptions_popup.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.*?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-
+<?import javafx.scene.layout.*?>
 <StackPane fx:id="parentPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.UIControllerPUMVNO">
    <children>
       <GridPane alignment="CENTER" prefHeight="0.0" prefWidth="600.0" StackPane.alignment="CENTER">
