--- a/Project/src/main/resources/popup_confirm_email.fxml
+++ b/Project/src/main/resources/popup_confirm_email.fxml
@@ -4,8 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.layout.*?>
 <AnchorPane prefHeight="150.0" prefWidth="300.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerPUD">
    <children>
       <ImageView fitHeight="150.0" fitWidth="300.0" pickOnBounds="true">
